--- a/Part 3. node.js/Quest 13. Session and Login/skeleton/package.json
+++ b/Part 3. node.js/Quest 13. Session and Login/skeleton/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "*"
+    "express": "*",
+    "express-session": "^1.15.6"
   }
 }
