--- a/Part 3. node.js/Quest 13. Session and Login/skeleton/package.json
+++ b/Part 3. node.js/Quest 13. Session and Login/skeleton/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "express": "*",
     "express-session": "^1.15.6"
   }
