--- a/Part 3. node.js/Quest 12. AJAX/skeleton/package.json
+++ b/Part 3. node.js/Quest 12. AJAX/skeleton/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "*"
+    "express": "*",
+    "supervisor": "^0.12.0"
   }
 }
