--- a/Part 4. Database/Quest 15. ORM/skeleton/package.json
+++ b/Part 4. Database/Quest 15. ORM/skeleton/package.json
@@ -4,6 +4,8 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "express": "*",
-    "express-session": "^1.15.6"
+    "express-session": "^1.15.6",
+    "mysql": "^2.16.0",
+    "sequelize": "^4.38.0"
   }
 }
