--- a/Part 4. Database/Quest 15. ORM/skeleton/package.json
+++ b/Part 4. Database/Quest 15. ORM/skeleton/package.json
@@ -6,6 +6,7 @@
     "express": "*",
     "express-session": "^1.15.6",
     "mysql": "^2.16.0",
+    "mysql2": "^1.6.1",
     "sequelize": "^4.38.0"
   }
 }
