--- a/Part 5. Web 2018/Quest 16. Vue.js/submit/notepad/package.json
+++ b/Part 5. Web 2018/Quest 16. Vue.js/submit/notepad/package.json
@@ -10,6 +10,12 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "express-session": "^1.15.6",
+    "mysql2": "^1.6.1",
+    "sequelize": "^4.38.0",
     "vue": "^2.5.11"
   },
   "browserslist": [
