--- a/Part 5. Web 2018/Quest 18. GraphQL/submit/notepad/client/package.json
+++ b/Part 5. Web 2018/Quest 18. GraphQL/submit/notepad/client/package.json
@@ -11,8 +11,15 @@
   },
   "dependencies": {
     "apollo-boost": "^0.1.16",
+    "apollo-cache-inmemory": "^1.3.0",
+    "apollo-client": "^2.4.2",
+    "apollo-link": "^1.2.3",
+    "apollo-link-context": "^1.0.9",
+    "apollo-link-error": "^1.1.1",
+    "apollo-link-http": "^1.5.5",
     "babel-polyfill": "^6.26.0",
     "graphql": "^14.0.2",
+    "graphql-tag": "^2.9.2",
     "sweetalert": "^2.1.0",
     "vue": "^2.5.11",
     "vue-apollo": "^3.0.0-beta.25",
