fix: test content modified

--- a/Part 5. Web 2018/Quest 19. Jest & Puppeteer/submit/notepad/server/package.json
+++ b/Part 5. Web 2018/Quest 19. Jest & Puppeteer/submit/notepad/server/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "test": "node server.js & jest __tests__",
     "test-db": "jest __tests__/userdb.test.js",
-    "test-graphql": "jest __tests__/server.test.js",
+    "test-graphql": "node server.js & jest __tests__/server.test.js",
     "stop": "kill -15 $(pgrep -f node\" \"server.js)"
   },
   "dependencies": {
